<resources>
    <string name="app_name">HackYourLife</string>
    <string name="introText">Good. You\'re awake...</string>
    <string name="introText2">Come to play?</string>
    <string name="introText3">You will now be known as a..</string>
    <string name="introText4">GENEHACKER</string>
    <string name="beginButton">Start your Journey</string>
    <string name="aminoGame">Amino Practice</string>
    <string name="meditation">Meditate</string>
    <string name="main">Home</string>

    <string name="default_location">Fetching Location...</string>

    <!--Step Counter Strings-->
    <string name="numSteps">0</string>
    <string name="startSteps">Count Your Steps</string>


    <!--  AA matching game -->
    <string name="aa_game">Amino Acid Matching</string>

    <string name="hello_world">Amino Acid Matching</string>
    <string name="action_settings">Settings</string>
    <string name="action_home">Home</string>
    <string name="title_game">Master the art of amino acid identification</string>
    <string name="instr_btn">instructions</string>
    <string name="play_btn">play</string>
    <string name="play_again_btn">play again</string>
    <string name="list_icon">Task Manager</string>
    <string name="sec">sec</string>

    <string name="match_found">Matches found:</string>
    <string name="time_text">Time:</string>
    <string name="life_text">Life:</string>
    <string name="img_desc">imagen</string>

    <string name="instr_txt"><b>Three amino acid images will appear. Match the amino acid name with the correct image before the name changes! You have 40 seconds and 3 lives.</b></string>
    <string name="feedback_pos"><b>Awesome, you are a pro!.</b></string>
    <string name="feedback_neg_lifes"><b>You ran out of lives!</b></string>
    <string name="feedback_neg_time"><b>You ran out of time!</b></string>
    <string name="title_activity_game">Game</string>
    <string name="title_activity_instruction">Instructions</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="share_title">Master the art of amino acid identification: \n\n</string>
    <string name="share_app"><b></b></string>

    <!-- Step Counter -->
    <string name="action_about">About</string>

    <string name="meditate">Put on your headphones and press play!</string>

</resources>
