<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_java"
    tools:context="com.bif812.roman.hackyourlife.MainActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/background_java">

        <com.bif812.roman.hackyourlife.Typewriter
            android:id="@+id/intro1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="42dp"
            android:text="@string/introText"
            android:textColor="#0F173B"
            android:textSize="20sp"
            android:textStyle="bold" />
        <!--android:background="#0F173B"-->

        <com.bif812.roman.hackyourlife.Typewriter
            android:id="@+id/intro2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/intro1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/introText2"
            android:textColor="#0F173B"
            android:textSize="20sp"
            android:textStyle="bold" />
        <!--android:background="#0F173B"-->

        <!--try to think about another intro/ also faster typewriting-->
        <com.bif812.roman.hackyourlife.Typewriter
            android:id="@+id/intro3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/intro2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="90dp"
            android:text="@string/introText3"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
        <!--android:background="#0F173B"-->

        <com.bif812.roman.hackyourlife.Typewriter
            android:id="@+id/intro4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/intro3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="75dp"
            android:text="@string/introText4"
            android:textColor="@android:color/background_light"
            android:textSize="30sp"
            android:textStyle="bold" />

        <!--android:background="#0F173B"-->
    </RelativeLayout>

    <Button
        android:id="@+id/introButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:background="#0F173B"
        android:text="@string/beginButton"
        android:textColor="@android:color/background_light"/>

</RelativeLayout>
