<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/aa_game_background"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:gravity="top|center_vertical"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="145dp"
            android:layout_weight="0.3"
            android:backgroundTintMode="@color/cardview_dark_background"
            android:lineSpacingExtra="12sp"
            android:text="@string/aa_game"
            android:textAlignment="center"
            android:textSize="46sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:paddingBottom="@dimen/margin_top"
            android:text="@string/title_game"
            android:textColor="@color/titles"
            android:padding="13dp"
            android:textSize="@dimen/main_titles_size"/>

        <Button
            android:id="@+id/instrBtn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/instr_btn"
            android:textColor="@color/text_color"
            android:background="@color/button_bg"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textAllCaps="true"
            android:textSize="@dimen/button_label"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="@dimen/space_top"
            style="?android:borderlessButtonStyle"
            android:layout_weight="0.1"
            />
        <Button
            android:id="@+id/playBtn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/play_btn"
            android:textColor="@color/text_color"
            android:background="@color/button_bg"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textSize="@dimen/button_label"
            android:textAllCaps="true"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginBottom="@dimen/space_bottom"
            android:layout_weight="0.1"
            style="?android:borderlessButtonStyle"
            />

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>